--- a/package.json
+++ b/package.json
@@ -22,5 +22,9 @@
         "dev": "encore dev",
         "watch": "encore dev --watch",
         "build": "encore production --progress"
+    },
+    "dependencies": {
+        "animate.css": "^4.1.1",
+        "bootswatch": "^4.6.0"
     }
 }
