--- a/config/packages/twig.yaml
+++ b/config/packages/twig.yaml
@@ -1,2 +1,10 @@
 twig:
     default_path: '%kernel.project_dir%/templates'
+    form_themes: 
+        - "bootstrap_4_horizontal_layout.html.twig"
+        - '@FOSCKEditor/Form/ckeditor_widget.html.twig'
+fos_ck_editor:
+    configs:
+        main_config:
+            toolbar:
+                - { name: "styles", items: ['Bold', 'Italic', 'Underline', 'Strike', 'Blockquote', '-', 'Link', '-', 'RemoveFormat', '-', 'NumberedList', 'BulletedList', '-', 'Outdent', 'Indent', '-', '-', 'JustifyLeft', 'JustifyCenter', 'JustifyRight', 'JustifyBlock', '-','Styles', 'Format'] }
