conf:add translate

--- a/config/packages/twig.yaml
+++ b/config/packages/twig.yaml
@@ -3,6 +3,8 @@ twig:
     form_themes: 
         - "bootstrap_4_horizontal_layout.html.twig"
         - '@FOSCKEditor/Form/ckeditor_widget.html.twig'
+    date:
+        timezone: Europe/Paris
 fos_ck_editor:
     configs:
         main_config:
