--- a/composer.json
+++ b/composer.json
@@ -19,6 +19,7 @@
         "symfony/asset": "5.2.*",
         "symfony/config": "5.2.*",
         "symfony/console": "5.2.*",
+        "symfony/dom-crawler": "5.2.*",
         "symfony/dotenv": "5.2.*",
         "symfony/expression-language": "5.2.*",
         "symfony/flex": "^1.3.1",
@@ -49,7 +50,6 @@
     },
     "require-dev": {
         "symfony/browser-kit": "^5.2",
-        "symfony/css-selector": "^5.2",
         "symfony/debug-bundle": "^5.2",
         "symfony/maker-bundle": "^1.0",
         "symfony/phpunit-bridge": "^5.2",
